fix CSS bugs on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
 	text-align: center;
-	display: grid;
 }
 
 .App-logo {
@@ -96,6 +95,7 @@ button:focus {
 }
 .buttonPage {
 	-webkit-transition: 0.6s;
+	padding-bottom: 100px;
 }
 .buttonPage.clicked {
 	transform: translateY(-100vh);
@@ -104,6 +104,7 @@ button:focus {
 	-webkit-transition: 0.6s;
 	opacity: 0;
 	height: 0;
+	padding-top: 80px;
 }
 .statPage.clicked {
 	transform: translateY(-100vh);
